Mon Sep 25 16:39:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Thu Sep 20 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* macsock.h:  Changes to support TCP streams and change password.

Thu Sep  8 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* k5-config.h:  defined MPW fake stat.h out for metrowerks compiler
	* macsock.h:  changed SOCKET definition for MACINTOSH to start support for
		TCP streams
	* TCPBP.h:  fixed up some prototype problems with out customized tcp sockets
		for macintosh

Thu Sep  7 15:53:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* adm.h (KRB5_ADM_SERVICE_NAME): Use official IANA assigned name
		for the port, which is kpasswd, not changepw.  Add new
		define, KRB5_ADM_SERVICE_INSTANCE, which defines the
		instance name used for the kadmin name.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * adm.h, adm_proto.h kdb.h : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * adm_proto.h : Remove krb5_enctype references, and replace with
                krb5_keytype where appropriate.

Thu Aug 31 11:38:58 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add checks for stddef.h and xom.h for use by GSSAPI-V2


Tue Aug 29 13:28:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb.h - Add prototype for krb5_ser_db_context_init().


Mon Aug 21 17:00:58 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Add krb5_timestamp_to_sfstring() prototype.


Tue Aug 15 14:27:02 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb.h - Add prototype for krb5_dbe_find_keytype().


Thu Aug 10 14:33:51 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb.h - Always define KRB5_MAX_FAIL_COUNT.


Mon Aug 07 11:22:57 1995   Chris Provenzano (proven@mit.edu)

	* kdb.h : Add prototypes for krb5_dbe_{en,de}code_last_pwd_change(),
		krb5_dbe_{apw,cpw,ark,crk}(),

Fri Aug 4 16:10:34 EDT 1995	Paul Park	(pjpark@mit.edu)